--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "type": "commonjs",
   "devDependencies": {
     "@playwright/test": "^1.55.0",
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "allure-playwright": "^3.3.3"
   },
   "dependencies": {
     "csv-parse": "^6.1.0",
