--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "allure-playwright": "^3.3.3"
   },
   "dependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "csv-parse": "^6.1.0",
     "xlsx": "^0.18.5"
   }
